fix spring di issues and settings issues. load all settings from airavata properties.